--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -5,8 +5,18 @@
 p,h1,h2,h3,h4,h5,h6{
     margin: 0 !important;
 }
+.separator{
+    border: $border 1px solid;
+}
 @media (min-width:1264px){
     .container{
         max-width: 1280px;
     }
+    .asset-cost-container{
+        max-width: 1100px;
+    }
+}
+.v-expansion-panel-header__icon{
+    margin-right: -100px;
+    padding-left: 100px;
 }
